# algorithm_visualisation

client/: package-lock.json  package.json
client/src/: App.css  App.tsx  index.css
client/src/components/: ArrayToSort.tsx  BarGraph.tsx  NavBar.tsx  SelectSortingAlgorithm.tsx  SortingMenu.tsx  SortingVisualization.tsx
client/src/components/css/: BarGraph.css  SortingVisualization.css
client/src/services/: ApiService.tsx
leptos/algorithm-visualisation/: .gitignore  .temp.swo  .temp.swp  Cargo.toml  index.html  package-lock.json  tailwind.config.js
leptos/algorithm-visualisation/src/: app.rs  bogosortviz.rs  bubblesortviz.rs  insertsortviz.rs  landing_page.rs  lib.rs  main.rs  mergesortviz.rs  navbar.rs  path_finding.rs  path_finding_menu.rs  path_finding_menuold.rs  quicksortviz.rs  selectionsortviz.rs  sorting.rs  sorting_chart.rs  sorting_controls.rs  sorting_info.rs  sorting_menu.rs
leptos/algorithm-visualisation/src/node/: node.rs
leptos/algorithm-visualisation/static/pkg/: app.js  app.wasm
server/: Cargo.toml
server/src/: main.rs  routes.rs  sorting.rs
src/: routes.rs  sorting.rs
