[package]
name = "algorithm_visualisation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/rwf2/Rocket", rev = "e6aaea0" , features = ["json"]}
strum = "0.26.2"
strum_macros = "0.26.2"

